# tdd_kent_beck_study

./: LICENSE  README.md  pyproject.toml
money/: dollar.py  money.py
money/tests/: test_arithmetic.py
tdd_tool/: pyproject.toml  tdd_tool.py  tests.py
tdd_tool/tests/: test_smth.py
tests/: test_arithmetic.py
