[tool.poetry]
name = "tdd_kent_beck_study"
version = "0.1.0"
description = ""
authors = ["Gabriel Simonetto <gabrielfranksimonetto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
